feat(data-platform): export registered data products
